--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-updates": "~0.18.19",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-axios": "^0.17.1",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
