--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-axios": "^0.17.1",
+    "react-native-grid-component": "^2.0.1",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
